<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Garbage Sorter</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_1">首页</string>
    <string name="page_2">分类</string>
    <string name="page_3">收藏</string>
    <string name="page_4">设置</string>
    <string name="welcome_to_garbagesorter">垃圾分类，人人有责!</string>
    <string name="loading">数据加载中，请稍后…</string>
    <string name="this_is_activity_detail">this is activity_detail</string>
    <string name="name_of_all_garbage">▋ 生活垃圾分类</string>
    <string name="tips">▋ 说明</string>
    <string name="tips_text">鼓励将可回收物卖入废品回收系统，或交投至两网融合服务点，或投放至可回收物收集容器；严禁将有害垃圾投放到其他的生活垃圾收集容器；日常家庭生活垃圾要做到干、湿垃圾两分开。</string>
    <string name="fragment_one_edit">请输入正确内容</string>
    <string name="searchViewTitle">搜索</string>
    <string name="title_activity_garbage_info">GarbageInfoActivity</string>
    <string name="type1">可回收物</string>
    <string name="type2">厨余垃圾</string>
    <string name="type3">其他垃圾</string>
    <string name="type4">有害垃圾</string>
    <string name="type11">轻投轻放\n清洁干燥，避免污染\n废纸尽量平整\n立体包装物请清空内容物，清洁后压扁投放\n有尖锐边角的，应包裹后投放</string>
    <string name="type22">纯流质的食物垃圾，如牛奶等，应直接倒进下水口
有包装物的湿垃圾应将包装物去除后分类投放，包装物请投放到对应的可回收物或干垃圾容器</string>
    <string name="type33">尽量沥干水分
难以辨识类别的生活垃圾投入干垃圾容器内</string>
    <string name="type44">投放时请注意轻放
易破损的请连带包装或包裹后轻放
如易挥发，请密封后投放</string>
    <string name="dialog_title">未开启通知栏权限</string>
    <string name="dialog_message">请开启应用的通知栏权限，否则将无法正常使用某些功能。</string>
    <string name="dialog_btn1">去开启</string>
    <string name="dialog_btn2">拒绝</string>
    <string name="searchactivity_bartitle">搜索</string>
    <string name="garbageinfoactivity_text1">▋ 投放要求</string>
    <string name="garbageinfoactivity_text2">收藏已存在</string>
    <string name="garbageinfoactivity_text3">收藏成功！</string>
    <string name="garbageinfoactivity_text4">添加至收藏</string>
    <string name="garbageinfoactivity_bartitle">搜索结果</string>
    <string name="deatil_des11">指适宜回收利用和资源化利用的生活废弃物。可回收物主要包括：废纸、废弃塑料瓶、废金属、废包装物、废旧纺织物、废弃电器电子产品、废玻璃、废纸塑铝复合包装等</string>
    <string name="detail_des12">轻投轻放\n清洁干燥，避免污染\n废纸尽量平整\n立体包装物请清空内容物，清洁后压扁投放\n有尖锐边角的，应包裹后投放</string>
    <string name="detail_des21">干垃圾即其它垃圾，指除可回收垃圾、有害垃圾、湿垃圾以外的其它生活废弃物</string>
    <string name="detail_des22">尽量沥干水分\n难以辨识类别的生活垃圾投入干垃圾容器内</string>
    <string name="detail_des31">指对人体健康或者自然环境造成直接或者潜在危害生活的废弃物。常见的有害垃圾包括废灯管、废油漆、杀虫剂、废弃化妆品、过期药品、废电池、废灯泡、废水银温度计等，有害垃圾需按照特殊正确的方法安全处理。</string>
    <string name="detail_des32">投放时请注意轻放\n易破损的请连带包装或包裹后轻放\n如易挥发，请密封后投放</string>
    <string name="detail_des41">易腐垃圾（餐厨垃圾），也可称湿垃圾，一般是指餐饮经营者、单位食堂等生产过程中产生的餐厨废弃物，以及家庭生活中产生的易腐性垃圾，主要包括：剩菜剩饭、菜梗菜叶、肉食内脏、果壳瓜皮等等。</string>
    <string name="detail_des42">纯流质的食物垃圾，如牛奶等，应直接倒进下水口\n有包装物的湿垃圾应将包装物去除后分类投放，包装物请投放到对应的可回收物或干垃圾容器</string>
    <string name="detail_text1">▋ 定义</string>
    <string name="detail_text2">▋ 投放要求</string>
    <string name="detail_text3">▋ 常见垃圾</string>
    <string name="fragment_four_bartitle">设置</string>
    <string name="set_language">Language</string>
    <string name="service_title">应用运行中</string>
    <string name="service_text">点击搜索</string>
    <string name="garbageinfoactivity_image_hint">点击任意处关闭</string>
    <string name="mainactivity_title">垃圾分类指南</string>
    <string name="mainactivity_subtitle">爱护环境,人人有责</string>
    <string name="fragment_three_title">我的收藏</string>
    <string name="menuitem1">取消收藏</string>
    <string name="menuitem2">分享</string>
    <string name="menuitem3">报错</string>
    <string name="fragment_four_dialogtitle">选择语言</string>
    <string name="fragment_four_dialogbtn">确认</string>
    <string name="fragment_four_dialogbtn2">取消</string>
    <string name="fragment_three_tpis">没有内容？试试刷新</string>
    <string name="delete_history">删除搜索历史</string>
    <string name="delete_history_title">删除历史记录</string>
    <string name="delete_history_text">确认删除？</string>
    <string name="title_activity_image_upload" translatable="false">ImageUploadActivity</string>
    <string name="image_chooser">选择打开方式</string>
    <string name="title_activity_image_recognition" translatable="false">ImageRecognitionActivity</string>
    <string name="recognize_result">识别结果</string>
    <string name="predict_text">"预测结果为： "</string>
    <string name="delete_collection">删除收藏</string>
    <string name="reco_result_btn">查看详细</string>
    <string name="report">错误报告</string>
    <string name="fg_toast">操作成功</string>
    <string name="img_up_choose">选择图片</string>
    <string name="img_up_require_permission">应用需要相机和读取外部存储权限来上传图片</string>
    <string name="search_no_results">没有匹配的结果</string>


</resources>