<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/menu_item_one"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/page_1" />
        <item
            android:id="@+id/menu_item_two"
            android:icon="@drawable/ic_baseline_storage_24"
            android:title="@string/page_2" />
        <item
            android:id="@+id/menu_item_three"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/page_3" />
        <item
            android:id="@+id/menu_item_four"
            android:icon="@drawable/ic_baseline_settings_applications_24"
            android:title="@string/page_4" />
    </menu>

